--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
+    <link href="/index.css" type="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <div class="left-links">Header Logo</div>
+        <div class="right-links"></div>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
