hero section created

--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@
             </ul>
         </div>
     </header>
-    <main></main>
+    <main>
+        <div class="hero">
+            <div class="hero-content">
+                <div class="hero-title">This website is awesome</div>
+                <div class="hero-subtitle">This website has some that goes here under the main title. it's a smaller font and the color is lower contrast</div>
+                <button class="hero-button">Sign Up</button>
+            </div>
+            <div class="hero-img">
+                <img src="burger.jpg" alt="burger-image">
+               
+            </div>
+        </div>
+    </main>
     <footer></footer>
 </body>
 </html>
