--- a/index.html
+++ b/index.html
@@ -1,35 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
-    <link href="index.css" rel="stylesheet">
-</head>
-<body>
+    <link href="index.css" rel="stylesheet" />
+  </head>
+  <body>
     <header>
-        <div class="left-links">Header Logo</div>
-        <div class="right-links">
-            <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
-            </ul>
-        </div>
+      <div class="left-links">Header Logo</div>
+      <div class="right-links">
+        <ul>
+          <li><a href="#">header link one</a></li>
+          <li><a href="#">header link two</a></li>
+          <li><a href="#">header link three</a></li>
+        </ul>
+      </div>
     </header>
     <main>
-        <div class="hero">
-            <div class="hero-content">
-                <div class="hero-title">This website is awesome</div>
-                <div class="hero-subtitle">This website has some that goes here under the main title. it's a smaller font and the color is lower contrast</div>
-                <button class="hero-button">Sign Up</button>
-            </div>
-            <div class="hero-img">
-                <img src="burger.jpg" alt="burger-image">
-               
-            </div>
+      <div class="hero">
+        <div class="hero-content">
+          <div class="hero-title">This website is awesome</div>
+          <div class="hero-subtitle">
+            This website has some that goes here under the main title. it's a
+            smaller font and the color is lower contrast
+          </div>
+          <button class="hero-button">Sign Up</button>
         </div>
+        <div class="hero-img">
+          <img src="burger.jpg" alt="burger-image" />
+        </div>
+      </div>
+      <div class="info">
+        <div class="info-title">Some random information</div>
+        <div class="info-cards">
+          <div class="info-card">
+            <div class="card-img">
+                <img src="" alt="">
+            </div>
+            <div class="card-text">this is some subtext under an illustration or image</div>
+          </div>
+          <div class="info-card"> 
+            <div class="card-img"></div>
+                <img src="" alt="">
+            </div>
+            <div class="card-text">this is some subtext under an illustration or image</div></div>
+          <div class="info-card"> 
+            <div class="card-img">
+                <img src="" alt="">
+            </div>
+            <div class="card-text">this is some subtext under an illustration or image</div></div>
+          <div class="info-card"> 
+            <div class="card-img">
+                <img src="" alt="">
+            </div>
+            <div class="card-text">this is some subtext under an illustration or image</div></div>
+        </div>
+      </div>
     </main>
     <footer></footer>
-</body>
+  </body>
 </html>
