--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Landing Page</title>
     <link href="index.css" rel="stylesheet" />
   </head>
+
   <body>
     <header>
       <div class="left-links">Header Logo</div>
@@ -36,28 +37,58 @@
         <div class="info-cards">
           <div class="info-card">
             <div class="card-img">
-                <img src="" alt="">
+              <img src="" alt="" />
             </div>
-            <div class="card-text">this is some subtext under an illustration or image</div>
+            <div class="card-text">
+              this is some subtext under an illustration or image
+            </div>
           </div>
-          <div class="info-card"> 
+          <div class="info-card">
             <div class="card-img"></div>
-                <img src="" alt="">
-            </div>
-            <div class="card-text">this is some subtext under an illustration or image</div></div>
-          <div class="info-card"> 
-            <div class="card-img">
-                <img src="" alt="">
-            </div>
-            <div class="card-text">this is some subtext under an illustration or image</div></div>
-          <div class="info-card"> 
-            <div class="card-img">
-                <img src="" alt="">
-            </div>
-            <div class="card-text">this is some subtext under an illustration or image</div></div>
+            <img src="" alt="" />
+          </div>
+          <div class="card-text">
+            this is some subtext under an illustration or image
+          </div>
+        </div>
+        <div class="info-card">
+          <div class="card-img">
+            <img src="" alt="" />
+          </div>
+          <div class="card-text">
+            this is some subtext under an illustration or image
+          </div>
+        </div>
+        <div class="info-card">
+          <div class="card-img">
+            <img src="" alt="" />
+          </div>
+          <div class="card-text">
+            this is some subtext under an illustration or image
+          </div>
         </div>
       </div>
+      <div class="qoutes">
+        <div class="qoutes-content">
+          This is an inspiring quote, or a testimonial from customer. Maybe it's
+          just filling up space, or maybe people will actually read it. Who
+          knows? All i know is that it look nice
+        </div>
+        <div class="auther">-Akshay, Software developer</div>
+      </div>
+      <div class="contact-us">
+        <div class="contact-text">
+            <div class="contact-title">Call to action! It's time!</div>
+            <div class="contact-subtitle">Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <div class="contact-button">
+            <button>Sign up</button>
+        </div>
+
+      </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-content">Copyright @ Odin Project 2024 </div>
+    </footer>
   </body>
 </html>
