--- a/index.html
+++ b/index.html
@@ -1,94 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing Page</title>
-    <link href="index.css" rel="stylesheet" />
-  </head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Landing Page</title>
+        <link href="index.css" rel="stylesheet" />
+    </head>
 
-  <body>
-    <header>
-      <div class="left-links">Header Logo</div>
-      <div class="right-links">
-        <ul>
-          <li><a href="#">header link one</a></li>
-          <li><a href="#">header link two</a></li>
-          <li><a href="#">header link three</a></li>
-        </ul>
-      </div>
-    </header>
-    <main>
-      <div class="hero">
-        <div class="hero-content">
-          <div class="hero-title">This website is awesome</div>
-          <div class="hero-subtitle">
-            This website has some that goes here under the main title. it's a
-            smaller font and the color is lower contrast
-          </div>
-          <button class="hero-button">Sign Up</button>
-        </div>
-        <div class="hero-img">
-          <img src="burger.jpg" alt="burger-image" />
-        </div>
-      </div>
-      <div class="info">
-        <div class="info-title">Some random information</div>
-        <div class="info-cards">
-          <div class="info-card">
-            <div class="card-img">
-              <img src="" alt="" />
+    <body>
+        <header>
+            <div class="left-links">Header Logo</div>
+            <div class="right-links">
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
             </div>
-            <div class="card-text">
-              this is some subtext under an illustration or image
+        </header>
+        <main>
+            <div class="hero">
+                <div class="hero-content">
+                    <div class="hero-title">This website is awesome</div>
+                    <div class="hero-subtitle">
+                        This website has some that goes here under the main
+                        title. it's a smaller font and the color is lower
+                        contrast
+                    </div>
+                    <button class="hero-button">Sign Up</button>
+                </div>
+                <div class="hero-img">
+                    <img src="burger.jpg" alt="burger-image" />
+                </div>
             </div>
-          </div>
-          <div class="info-card">
-            <div class="card-img"></div>
-            <img src="" alt="" />
-          </div>
-          <div class="card-text">
-            this is some subtext under an illustration or image
-          </div>
-        </div>
-        <div class="info-card">
-          <div class="card-img">
-            <img src="" alt="" />
-          </div>
-          <div class="card-text">
-            this is some subtext under an illustration or image
-          </div>
-        </div>
-        <div class="info-card">
-          <div class="card-img">
-            <img src="" alt="" />
-          </div>
-          <div class="card-text">
-            this is some subtext under an illustration or image
-          </div>
-        </div>
-      </div>
-      <div class="qoutes">
-        <div class="qoutes-content">
-          This is an inspiring quote, or a testimonial from customer. Maybe it's
-          just filling up space, or maybe people will actually read it. Who
-          knows? All i know is that it look nice
-        </div>
-        <div class="auther">-Akshay, Software developer</div>
-      </div>
-      <div class="contact-us">
-        <div class="contact-text">
-            <div class="contact-title">Call to action! It's time!</div>
-            <div class="contact-subtitle">Sign up for our product by clicking that button right over there!</div>
-        </div>
-        <div class="contact-button">
-            <button>Sign up</button>
-        </div>
 
-      </div>
-    </main>
-    <footer>
-        <div class="footer-content">Copyright @ Odin Project 2024 </div>
-    </footer>
-  </body>
+            <div class="info">
+                <div class="info-title">Some random information</div>
+                <div class="info-cards">
+                    <div class="info-card">
+                        <div class="card-img">
+                            <img src="food1.png" alt="" />
+                        </div>
+                        <div class="card-text">
+                            this is some subtext under an illustration or image
+                        </div>
+                    </div>
+                    <div class="info-card">
+                        <div class="card-img">
+                            <img src="food2.png" alt="" />
+                        </div>
+                        <div class="card-text">
+                            this is some subtext under an illustration or image
+                        </div>
+                    </div>
+                    <div class="info-card">
+                        <div class="card-img">
+                            <img src="food3.png" alt="" />
+                        </div>
+                        <div class="card-text">
+                            this is some subtext under an illustration or image
+                        </div>
+                    </div>
+                    <div class="info-card">
+                        <div class="card-img">
+                            <img src="food4.png" alt="" />
+                        </div>
+                        <div class="card-text">
+                            this is some subtext under an illustration or image
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="qoutes">
+                <div class="qoutes-content">
+                    This is an inspiring quote, or a testimonial from customer.
+                    Maybe it's just filling up space, or maybe people will
+                    actually read it. Who knows? All i know is that it look nice
+                </div>
+                <div class="auther">-Akshay, Software developer</div>
+            </div>
+            <div class="contact-us">
+                <div class="contact-text">
+                    <div class="contact-title">Call to action! It's time!</div>
+                    <div class="contact-subtitle">
+                        Sign up for our product by clicking that button right
+                        over there!
+                    </div>
+                </div>
+                <div class="contact-button">
+                    <button>Sign up</button>
+                </div>
+            </div>
+        </main>
+        <footer>
+            <div class="footer-content">Copyright @ Odin Project 2024</div>
+        </footer>
+    </body>
 </html>
