--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
                 </div>
             </div>
 
-            <div class="qoutes">
-                <div class="qoutes-content">
+            <div class="quotes">
+                <div class="quotes-content">
                     This is an inspiring quote, or a testimonial from customer.
                     Maybe it's just filling up space, or maybe people will
                     actually read it. Who knows? All i know is that it look nice
                 </div>
-                <div class="auther">-Akshay, Software developer</div>
+                <div class="author">-Akshay, Software developer</div>
             </div>
             <div class="contact-us">
                 <div class="contact-text">
