font family updated

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Landing Page</title>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
         <link href="index.css" rel="stylesheet" />
     </head>
 
@@ -80,16 +81,20 @@
                 </div>
                 <div class="author">-Akshay, Software developer</div>
             </div>
-            <div class="contact-us">
-                <div class="contact-text">
-                    <div class="contact-title">Call to action! It's time!</div>
-                    <div class="contact-subtitle">
-                        Sign up for our product by clicking that button right
-                        over there!
+            <div class="contact">
+                <div class="contact-us">
+                    <div class="contact-text">
+                        <div class="contact-title">
+                            Call to action! It's time!
+                        </div>
+                        <div class="contact-subtitle">
+                            Sign up for our product by clicking that button
+                            right over there!
+                        </div>
                     </div>
-                </div>
-                <div class="contact-button">
-                    <button>Sign up</button>
+                    <div class="contact-button">
+                        <button>Sign up</button>
+                    </div>
                 </div>
             </div>
         </main>
